K8s/auto/3-networking/0-routes/auth-service/0-auth-service-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-service-route
  labels:
    app: togather
    service: auth-srv
    jwt: enabled # enables the jwt security policy
    ratelimitGlobal: enabled # enables ratelimiter
spec:
  parentRefs:
    - name: togather-gateway
      namespace: envoy-gateway

  # hostnames:
  # - "api.togather.com"
  #   # Auth endpoints

  rules:
    # Public routes - match both admin and user public endpoints
    - name: public-routes
      matches:
        - path:
            type: RegularExpression
            value: ^/api/v1/auth/(admin|user)/(login|signup|resend-verification|verify-email)$
        - path:
            type: RegularExpression
            value: ^/api/v1/auth/admin/2fa/verify$
      backendRefs:
        - name: auth-srv
          port: 3000

    - name: health-public
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth/health
      backendRefs:
        - name: auth-srv
          port: 3000

    # Protected routes - everything else under /api/v1/auth
    - name: auth-protected
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth
      backendRefs:
        - name: auth-srv
          port: 3000
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: public-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: auth-service-route
      sectionName: public-routes
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: auth-service-route
      sectionName: health-public
  # no jwt here → overrides parent and disables auth on these rules
  # this config will be overriding the jwt security policy set on other http route sections
